scss/fermyon-base.scss
/* 3.
   Global Base
*/

html {
    height: 100%;
}
body,
main {
    min-height: 100vh;
    position: relative;
}

body {
    background: lighten($lightlavender, 5%);
    min-height: 100vh;
}

main {
    padding: 5.75rem 0 0;
    min-height: 100vh;
    margin-bottom: -12rem;
    z-index: 100;
}

#topbar.navbar {
    background: lighten($lightlavender, 5%);
    padding-left: 5vw;
    padding-right: 5vw;
    border-bottom: 2px solid rgba(255,255,255,0.98);
    will-change: transform;
    transition: transform 200ms linear;
    position: fixed;
    left: 0;
    right: 0;
    z-index: 1000;

    .navbar-burger {
        width: 5.25rem;
        height: 5.25rem;
    }

    &.is-wide {
        padding-left: 2.5vw;
        padding-right: 2.5vw;
    }

    .dark-mode {
        position: absolute;
        right: 0;
        top: 2rem;
        display: inline-block;
        width: 1.5rem;
        line-height: 1.5;
        fill: $midblue;
    }

    &.headroom--pinned {
        margin: 0;
        transform: translateY(0%);
    }
    &.headroom--unpinned {
        transform: translateY(-100%);
    }

    @keyframes halfSpin {
        0% {
          transform: rotate(0);
        }

        25% {
          transform: rotate(180deg);
          opacity: 1;
        }

        38% {
          opacity: 0.75;
        }

        50% {
          transform: rotate(180deg);
        }

        75% {
          transform: rotate(360deg);
          opacity: 1;
        }

        88% {
          opacity: 0.75;
        }

        100% {
          transform: rotate(360deg);
        }
      }

      .logo {
        display: inline-block;
        margin-top: 0;
        fill: $oxfordblue;
        position: relative;
        margin-top: 0.35em;

        svg {
            max-height: 1.25rem;
            max-width: 10.625rem;
            cursor: pointer;
            position: relative;
            z-index: 500;
            fill: $oxfordblue;
        }

        &:hover {
            .spin-back {
                background-color: white;
            }
        }

        .spin-front {
          width: 1.133rem;
          height: 1.133rem;
          display: inline-block;
          position: absolute;
          top: 1.25rem;
          right: 1.9125rem;
          border-radius: 50%;
          z-index: 600;
          opacity: 1;
          animation: 4s ease infinite halfSpin;
          @include transition;

          em {
            width: 0.425rem;
            height: 0.425rem;
            display: inline-block;
            top: 0rem;
            right: 0.05rem;
            background: #28FFCC;
            position: absolute;
            z-index: 700;
            border-radius: 50%;
            @include transition;
          }
        }
        .spin-back {
          width: 1.125rem;
          height: 1.125rem;
          display: inline-block;
          position: absolute;
          top: 1.295rem;
          right: 1.875rem;
          border-radius: 50%;
          z-index: 400;
          background: transparent;
          @include transition;
        }
    }

    .logo-project {
        font-weight: bold;
        margin: 2rem 0 0 1.3335rem;
        font-size: 1.125rem;

        a {
            color: $darkspace;
        }

        .tag {
            margin: -0.5rem 0 0 0.67rem;
            position: relative;
        }

    }

    a.navbar-item {
        line-height: 3;
        background: transparent;
        font-weight: 700;
    }

    .navbar-menu {
        a {
            margin-left: 2vw;
            position: relative;
            color: $oxfordblue;
            @include sen;
            @include transition;

            em {
                position: absolute;
                left: 45%;
                right: 45%;
                bottom: -0.15rem;
                height: 0.333rem;
                opacity: 0;
                background-color: $seagreen;
                display: inline-block;
                @include border-radius(1rem, 1rem);
                @include transition;
                content: " ";
            }

            &:hover {
                em {
                    left: 25%;
                    right: 25%;
                    opacity: 1;
                }
            }
        }

        .button {
            color: darken($seagreen, 15%);
            border-color: $seagreen;
            margin: 1rem 0 0 2.5rem;
            @include transition;

            &:hover {
                color: darken($seagreen, 22.5%);
                background-color: white !important;
            }
        }
    }
}

.menu-wrap {
    padding: 0 2.5vw;
    width: 17rem;
    outline: 2px solid transparent;
    @include transition;

    &:hover {
        outline: 2px solid $lightlavender;
    }
}

aside.menu {
    font-size: 1rem;

    .menu-label {
        padding-left: 1.333vw;
        margin: 1.75rem 1.333vw 1rem 0;
    }

    ul {
        margin-bottom: 2.5rem;
    }

    a {
        padding: 0.6rem 1.25vw;
        margin-bottom: 0rem;
        font-weight: bold;
        display: inline-block;
        @include transition;
        @include border-radius(2rem,2rem);

        &:hover {
            background-color: $lightlavender;
            color: $darkspace;
        }

        &.button {
            line-height: 2.25;
            margin-top: 1.25rem;
            padding: 0 1.333vw;
            font-size: 1.125rem;
            background: transparent;
            border: 2px solid $seagreen;

            svg {
                margin-right: 0.25rem;
                margin-bottom: -1px;
            }

            svg, path {
                @include transition;
            }

            &:hover {
                background-color: $seagreen;
                color: white;

                svg, path {
                    fill: white;
                }
            }
        }
    }

    &.is-fixed-desktop {
        @media screen and (min-width: 1024px) {
            position: fixed;
            left: 5.5vw;
            top: 12rem;
        }
    
        @media screen and (max-width: 1023px) {
            position: relative;
            top: auto;
            left: auto;
            right: auto;
        }
    }

    &.is-sticky {
        @media screen and (min-width: 1024px) {
            position: sticky;
            left: 2.5vw;
            top: 5.75rem;
            bottom: 0;
            display: inline-block;
            vertical-align: top;
            max-height: 100vh;
            overflow-y: auto;
        }
    }
}

.page-wrap {
    position: relative;

    &.is-fullwidth {
        width: 100vw;
        max-width: 100vw !important;
    }
}

hr {
    background-color: rgba(100,100,100,.1);
}

hr.page-break {
    position: relative;
    text-align: center;
    height: 4rem;
    background: transparent;
    
    &:after {
        position: relative;
        width: 12.5%;
        display: inline-block;
        margin: 2.5rem 0 3.5rem;
        content: " ";
        height: .33rem;
        background: $lavender;
        @include border-radius(0.33rem, 0.33rem);
    }
}

.content section {
    margin-left: auto;
    margin-right: auto;
    max-width: 48.5rem;

    .box {
        margin-top: 2rem;
        margin-bottom: 3rem;
        padding: 1.67rem 2rem;
    }

    table {
        background-color: white;
        min-width: 100%;
        margin-top: 2rem;
        margin-bottom: 4rem;
        border-collapse: collapse;
        border-radius: 0.333em;
        overflow: hidden;
        box-shadow: 0 3px 6px rgba(30,30,30,.125);

        th, td {
            padding: 0.67vw 2vw;
            border-bottom: 1px solid $lavender;
            line-height: 1.5;
        }

        th {
            font-size: 1.125rem;
            font-weight: bold;
            color: $oxfordblue;
            background-color: $lightlemon;
            line-height: 1.75;
            border-bottom: 1px solid $lavender;
        }

        td {
            font-size: 1rem;
            border-bottom-color: $lightlavender;
        }

        tr {
            &:last-of-type {
                td {
                    border: none;
                }
            }
        }
    }
}


footer {
    background: white;
    margin: 0 auto 0;
    padding: 1.25rem 0 0;
    min-height: 12rem;
    border-top: 1px solid $lavender;
    position: relative;
    z-index: 1400;

    /* top row of links */
    ul,
    p {
        margin: 2rem 0 4rem;
    }

    p.lead {
        font-size: 1.25rem;
        max-width: 67%;
        line-height: 1.33;
        margin: -2.5rem 0 0;
        color: $darkocean
    }

    h4 {
        margin: 3rem 0 0;
        font-size: 1.25rem;
        font-weight: bold;
        color: $rust;
    }

    li {
        line-height: 2;
        list-style: none;
        font-size: 1.125rem;
    }

    img {
        max-height: 5rem;
        margin-top: 1rem;
    }

    /* bottom row of smaller links */
    .footer-nav {
        border-top: 1px solid $lightgray;

        .navbar {
            padding: 0;
            background: transparent;

            .navbar-item {
                padding: 0 4rem 0 0;
                font-size: 1rem;
                line-height: 1.33;
                color: $lavender;

                a {
                    color: darken($lightgray, 12.5%);
                    @include transition;

                    &:hover {
                        color: darken($lightgray, 42.5%);
                    }
                }

                &:last-of-type {
                    padding-right: 0;
                }
            }
        }

        p {
            margin: 0;
        }
    }
}

body.dark-theme {
    background: $oxfordblue;
    color: white;

    h1, h2, h3, h4, h5, p, li {
        color: white;
    }

    #topbar.navbar {
        background: $oxfordblue;
        border-color: $darkocean;

        .logo {
            svg, path {
                fill: white !important;
            }
        }
        .logo-project a {
            color: $seagreen;

            .tag {
                background-color: $darkspace;
            }
        }

        .navbar-menu {
            a {
                color: $seagreen;
            }

            .button {
                border: 3px solid $seagreen;

                &:hover {
                    background: $seagreen !important;
                    color: $oxfordblue;
                }
            }
        }

        .dark-mode {
            svg {
                fill: $seagreen;
                transform: rotate(180deg);
                @include transition;
            }
        }
    }

    aside.menu {
        left: 5vw;

        a {
            color: white;
            
            &:hover {
                color: $oxfordblue;
            }
        }
    }

    pre {
        background: linear-gradient(0, #173564 15%, lighten(desaturate(#173564, 12.5%), 3%) 100%);
    }

    .card {
        background: linear-gradient(0, lighten($oxfordblue, 5%), $oxfordblue 100%);
        box-shadow: 0 .5em 1em -.125em rgba(10,10,10,.5),
                    0 0 0 1px rgba(10,10,10,.52);
        outline: 1px solid rgba(255,255,255,0.2);
        color: white;

        figure.image {
            border-bottom: 1px solid rgba(255,255,255,0.333);
        }

        p {
            color: white;
        }
    }

    footer {
        background: $oxfordblue;
        border-color: $darkocean;
        color: white;

        h4 {
            color: white;
        }

        .footer-nav {
            border-color: darken($oxfordblue, 7.5%);
        }

        p, li, a {
            color: $seagreen;
        }
    }
}

